# GetObjectID

./: .gitignore  Cargo.toml  GetObjectID.c  GetObjectID_test.c  README.md  compile.bat
.cargo/: config
.github/workflows/: rust.yml
src/: dir_walker.rs  lib.rs
